<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">
    
      <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/headtitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/m10dip" >

                

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/overtimetask_time1"
                    android:textSize="@dimen/dimen14s" />

                <TextView
                    android:id="@+id/overtimetask_start_time"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:focusable="true"
                    android:hint="@string/overtimetask_timeh1"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen14s" />
                <ImageView 
                    android:layout_width="7dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:background="@mipmap/goright"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view"
                android:background="@color/text_gray2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/m10dip" >

                

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/overtimetask_time2"
                    android:textSize="@dimen/dimen14s" />

                <TextView
                    android:id="@+id/overtimetask_end_time"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:focusable="true"
                    android:hint="@string/overtimetask_timeh2"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen14s" />
                
                <ImageView 
                    android:layout_width="7dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:background="@mipmap/goright"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view"
                android:background="@color/text_gray2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/m10dip" 
                android:gravity="center_vertical">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/overtimetask_time3"
                    android:textSize="@dimen/dimen14s" />

                <RelativeLayout 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/overtimetask_people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:focusable="true"
                    android:maxLines="3"
                    android:padding="5dp"
                    android:hint="@string/overtimetask_timeh4"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen14s" />

                <ImageView
                    android:id="@+id/overtime_delete_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="2dp"
                    android:background="@mipmap/icon_delete" />

                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view"
                android:background="@color/text_gray2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/m10dip" >

                

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/overtimetask_time4"
                    android:textSize="@dimen/dimen14s" />

                <EditText
                    android:id="@+id/overtimetask_maincontent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:focusable="true"
                    android:hint="@string/overtimetask_timeh3"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    
                    android:textSize="@dimen/dimen14s" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view"
                android:background="@color/text_gray2" />

            <LinearLayout
                android:id="@+id/overtimetask_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/m10dip" >

                

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/overtimetask_time5"
                    android:textSize="@dimen/dimen14s" />

                <Spinner
                    android:id="@+id/overtimespn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/dark_red" />
            </LinearLayout>
         
            <View
                android:id="@+id/overtime_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view"
                android:background="@color/text_gray2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/out_memu_padding" >

                <Button
                    android:id="@+id/overtime_submit"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_login_red"
                    android:text="@string/submit"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
