<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/circular_bead"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shenpizhuangtai"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/dialog_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/out_memu_padding" >

                <RadioButton
                    android:id="@+id/rgs_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
					android:background="@drawable/ridiobutton_red"
                    android:checked="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shenpi"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/out_memu_big_size" />

                <RadioButton
                    android:id="@+id/rgs_2"
                    android:layout_width="wrap_content"
                    android:background="@drawable/ridiobutton_red"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shenpis"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/out_memu_big_size" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/dialog_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textColor="@color/dark_red"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/out_memu_padding"
                android:text="@string/shenpiyijian"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/app_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_in_white"
                android:hint="请输入审批意见！"
                android:maxLines="4"
                android:padding="5dp"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/MYbz" />
        </LinearLayout>

        <Button
            android:id="@+id/dialog_approval"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/ridiobutton_red"
            android:text="@string/shenpia"
            android:textColor="@color/white"
            android:textSize="@dimen/MYbz" />
    </LinearLayout>

</LinearLayout>